Casos de uso completos: Iniciar sesión, registrar usuario secundario,  listar usuarios secundarios, actualizar  usuario secundario (visualizar datos usuario secundario), inactivar usuario secundario.
Listar elecciones activas,consultar elección,listar candidatos,votar.

Ya hay validaciones pero hay que verificar sobre elección confirmada y verificar posibles validaciones

--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -7,7 +7,7 @@
 <form role="form" method="post">
     <div class="form-group">
         <label for="usr">Usuario:</label>
-        <input title="Ingrese su nombre de usuario" type="text" class="form-control" id="usr" name="nombre_usuario">
+        <input title="Ingrese su nombre de usuario" type="text" class="form-control" id="usr" name="nombreUsuario">
     </div>
     <br/>
     <div class="form-group">
